<resources>
    <!-- Application name -->
    <string name="app_name">\'DiveApp\'</string>

    <!-- MainActivity texts -->
    <string name="action_settings">Settings</string>
    <string name="main_map">Map</string>
    <string name="main_board">Board</string>
    <string name="main_search">Search</string>
    <string name="main_profile">Profile</string>
    <string name="action_search">Search</string>
    <string name="action_add">Add Post</string>

    <!-- Login form texts -->
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_password_validation_hint">Re-enter password</string>
    <string name="login_create_account">Create Account</string>
    <string name="login_login">Log In</string>
    <string name="login_new_user">New user?</string>
    <string name="login_member">Already a member?</string>

<!-- profile fragment texts -->
    <string name="account_info_title">Account Info</string>
    <string name="username_text">Username</string>
    <string name="username_hint">name</string>
    <string name="username_item">USERNAME</string>
    <string name="email_hint">Email address</string>
    <string name="email_item">EMAIL@PROVIDER.COM</string>
    <string name="personal_info_title">Personal Info</string>
    <string name="name_hint">Full name</string>
    <string name="name_item">John Doe</string>
    <string name="gender_hint">Gender</string>
    <string name="gender_item">@string/not_specified</string>
    <string name="gender_male">Male</string>
    <string name="gender_female">Female</string>
    <string name="birthday_hint">BirthDay</string>
    <string name="birthday_item">@string/not_specified</string>
    <string name="language_hint">Language</string>
    <string name="language_item">English</string>
    <string name="country_hint">Country</string>
    <string name="country_item">@string/not_specified</string>
    <string name="diver_info_title">Diver Info</string>
    <string name="certification_hint">Diver Certification</string>
    <string name="organization_hint">Organization</string>
    <string name="additional_cert_hint">Additional Certifications</string>
    <string name="not_specified">Not Specified</string>
    <string name="ok">OK</string>

    <!-- Board fragment profile values texts -->
    <string name="age_hint">Age</string>
    <string name="age_item">@string/not_specified</string>
    <string name="description_zoom_touch_close">Touch to close</string>
    <!-- DB values texts -->
    <string name="user_entry">user entry</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_map_fragment">Hello map fragment</string>
    <string name="hello_board_fragment">Hello board fragment</string>
    <string name="hello_search_fragment">Hello search fragment</string>
    <string name="hello_profile_fragment">Hello profile fragment</string>

    <!-- API APP KEY-->
    <string name="google_maps_key" translatable="false"
        templateMergeStrategy="preserve">AIzaSyD16uan7ZzIexqvKtz-WpHM3QugeBGszyw</string>
</resources>
