<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <RelativeLayout android:id="@+id/main_activity"
        android:layout_width="match_parent" android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView  android:id="@+id/hello_world" android:text="@string/hello_world"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout android:id="@+id/fragment_container" android:orientation="horizontal"
            android:layout_width="match_parent" android:layout_height="fill_parent"
            android:layout_below="@+id/hello_world" android:layout_above="@+id/bottom_bar">

        </LinearLayout>

        <LinearLayout android:id="@+id/bottom_bar"
            android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="horizontal" android:layout_alignParentBottom="true"
            android:weightSum="4">

            <Button android:id="@+id/btn_main_map" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:layout_weight="1" android:text="@string/main_map" />

            <Button android:id="@+id/btn_main_board"
                style="?android:textAppearanceSmall" android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1"
                android:text="@string/main_board" />
            <Button android:id="@+id/btn_main_search" style="?android:textAppearanceSmall"
                android:layout_width="match_parent" android:layout_height="match_parent"
                android:layout_weight="1" android:text="@string/main_search" />

            <Button android:id="@+id/btn_main_profile"
                style="?android:textAppearanceSmall" android:layout_width="match_parent"
                android:layout_height="match_parent" android:layout_weight="1"
                android:text="@string/main_profile" />

        </LinearLayout>

    </RelativeLayout>

</FrameLayout>
